--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,18 @@
     <title></title>
 </head>
 <body>
-     HELLO WORLD!
+    @@include('_header.html')
+
+    <div class="wrapper">
+        <main class="main">
+            <div class="container">
+                @@include('_hero.html')
+               
+            </div>
+          
+
+        </main>
+    </div>
+
 </body>
 </html>
